--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -2,26 +2,27 @@
   <div class="container">
     <div class="row justify-content-center mt-5">
 
-      <div class="mt-5">
-        <h2>Trail Name</h2>
-        <form action="/trail/searchTrail" method="POST">
-          <div class="mb-3">
-              <label for="title" class="form-label">Search</label>
-              <input type="text" class="form-control" id="title" name="title">
+      <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="card-body">
+          <h2 class="card-title">Yellowstone National Park</h2>
+          <p>The World's First National Park</p>
+          <div class="card-actions justify-end">
+            <button class="btn btn-primary">See Trails</button>
           </div>
-          <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
-        </form>
+        </div>
       </div>
 
-      <ul class="row list-unstyled">
-        <% for(var i=0; i<posts.length; i++) {%>
-          <li class="col-6 justify-content-between mt-5">
-            <a href="/post/<%= posts[i]._id%>">
-              <img class="img-fluid" src="<%= posts[i].image%>">
-            </a>
-          </li>
-        <% } %>
-        </ul>
+      <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="card-body">
+          <h2 class="card-title">Glacier National Park</h2>
+          <p>Crown of the Continent</p>
+          <div class="card-actions justify-end">
+            <button class="btn btn-primary">See Trails</button>
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </div>  
 <%- include('partials/footer') -%>
