--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,27 @@
 .card-body {
     width: 200px;
 }
-.btn-primary {
+.btn .btn-primary {
     color: green;
 }
+
+header {
+    color: blueviolet;
+}
+
+.form-control-dark {
+    border-color: var(--bs-gray);
+  }
+  .form-control-dark:focus {
+    border-color: #fff;
+    box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
+  }
+  
+  .text-small {
+    font-size: 85%;
+  }
+  
+  .dropdown-toggle {
+    outline: 0;
+  }
+  
