--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -34,7 +34,7 @@
           </div>
 
           <div class="row justify-content-center mt-5">
-              <a class="btn btn-primary" href="/feed">Return to Trails</a>
+              <a class="btn btn-primary" href="/parks">Return to Trails</a>
               <a href="/logout" class="col-3 btn btn-primary">Logout</a>
           </div>  
 
